# xlang

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  railway.toml
.cursor/rules/: xlang-library-no-globals.mdc
cmake/: embed_libs.cmake  embed_runtime.cmake
deploy/: Dockerfile  server.xlang
docs/: LANGUAGE.md
examples/: fetch.xlang  hello.xlang  http_server.xlang  index.html  interfaces.xlang  math.xlang  scheduler  scheduler.xlang  strings.xlang  sync_lock  sync_lock.xlang  types.xlang  welcome.html
include/xlang/: ast.h  build.h  codegen.h  compiler.h  embedded_libs.h  embedded_runtime.h  error.h  input.h  lexer.h  module.h  parser.h  runtime.h  syscalls.h  test.h  types.h
libs/: http.xlang  json.xlang  process.xlang  test.xlang  test_runner.xlang
libs/http/: router.xlang  server.xlang
runtime/: errors.xlang  file.xlang  json.xlang  net.xlang  rt.c  runtime.xlang  scheduler.xlang  sync.xlang  test.xlang  time.xlang
runtime/http/: router.xlang  server.xlang
src/: ast.cpp  codegen.cpp  compiler.cpp  file_bridge.cpp  input.cpp  lexer.cpp  main.cpp  module.cpp  parser.cpp  process_bridge.c  runtime.cpp  syscalls.cpp  test_runner.cpp  types.cpp
src/bridge/: net_server.c  panic_bridge.c  process_bridge.c  time_bridge.c  tls_bridge.c
test/: lib.xlang  main  main.xlang
test/xlang/: fetch.test.xlang  file.test.xlang  http.test.xlang  json.test.xlang  strings.test.xlang  sync.test.xlang
vscode/: .gitignore  .vscodeignore  README.md  bunfig.toml  language-configuration.json  package.json  tsconfig.json
vscode/scripts/: build.ts  package.ts
vscode/snippets/: xlang.json
vscode/src/: builtins.ts  completions.ts  diagnostics.ts  extension.ts  formatter.ts  hover.ts  languageIndex.ts  paths.ts  symbols.ts
vscode/syntaxes/: xlang.tmLanguage.json
